--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+aiohttp==3.9.3
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==23.2.0
 Authlib==1.3.0
 blinker==1.7.0
 certifi==2023.11.17
@@ -10,14 +15,20 @@ Flask==2.3.3
 Flask-Hashing==1.1
 Flask-JWT-Extended==4.6.0
 Flask-PyMongo==2.3.0
+frozenlist==1.4.1
+gunicorn==21.2.0
 idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.4
+multidict==6.0.4
+packaging==23.2
 pycparser==2.21
 PyJWT==2.8.0
 pymongo==4.6.1
 python-dotenv==1.0.0
 requests==2.31.0
+twilio==8.12.0
 urllib3==2.1.0
 Werkzeug==3.0.1
+yarl==1.9.4
