--- a/Auth-Server/docker-compose.yml
+++ b/Auth-Server/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: mongodb_container
+    container_name: mongodb_users
     ports:
       - "27017:27017"
     volumes:
