aggiunto form per ottenere il nuovo link di verifica, domani completare login e si parte con la risoluzione dei vari errori elencati su git

--- a/Auth-Server/docker-compose.yml
+++ b/Auth-Server/docker-compose.yml
@@ -9,5 +9,8 @@ services:
       - "27017:27017"
     volumes:
       - mongodb_data:/data/db
+    # prima creare un user così tipo poi mandare giù il db e decommentare: db.createUser({user: "admin",pwd: "admin_password",roles: [{ role: "userAdminAnyDatabase", db: "admin" }]})
+    # command: --auth 
+
 volumes:
   mongodb_data:
