--- a/OTP-Server/Pipfile
+++ b/OTP-Server/Pipfile
@@ -4,17 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-authlib = "==1.3.0"
-email-validator = "==2.1.1"
 flask = "==3.0.2"
-flask-cors = "==4.0.0"
 flask-hashing = "==1.1"
 flask-jwt-extended = "==4.6.0"
-flask-mail = "==0.9.1"
 flask-pymongo = "==2.3.0"
-itsdangerous = "==2.1.2"
-password-strength = "==0.0.3.post2"
-pymongo = "==4.6.1"
+twilio = "==9.0.0"
 python-dotenv = "==1.0.0"
 
 [dev-packages]
