--- a/Auth-Server/Pipfile
+++ b/Auth-Server/Pipfile
@@ -17,6 +17,7 @@ password-strength = "==0.0.3.post2"
 pymongo = "==4.6.1"
 python-dotenv = "==1.0.0"
 requests= "==2.31.0"
+redis = "*"
 
 [dev-packages]
 
