gestione del redis messo nei file env, server email funzionante ma manca ancora lintegrazione con un provider email, sistemato bug nellactivate account (permetteva di inviare link di attivazione a utenti già attivi) à

--- a/Auth-Server/docker-compose.yml
+++ b/Auth-Server/docker-compose.yml
@@ -14,11 +14,17 @@ services:
       context: .
       dockerfile: Dockerfile.redis
     container_name: redis
+    command: --port 6380
     ports: 
       - "6380:6380"
+    volumes:
+      - type: volume
+        source: redis-data
+        target: /data
 
     # prima creare un user così tipo poi mandare giù il db e decommentare: db.createUser({user: "admin",pwd: "admin_password",roles: [{ role: "userAdminAnyDatabase", db: "admin" }]})
     # command: --auth 
 
 volumes:
   mongodb_data:
+  redis-data: {}
