--- a/Auth-Server/Auth.env
+++ b/Auth-Server/Auth.env
@@ -5,4 +5,6 @@ MAIL_PORT=2525
 MAIL_USERNAME=9f894e9d6cd72b
 MAIL_PASSWORD=c3b1743df0dc35
 FRONTEND_DOMAIN=http://localhost:3000
-MAIL_SENDER=eduardo.giraudi13@gmail.com
+MAIL_SENDER=authentication@nomeapp.it
+REDIS_HOST=localhost
+REDIS_PORT=6380
