--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,14 @@ services:
     container_name: mongodb_users
     ports:
       - "27017:27017"
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
+      # - MONGO_INITDB_DATABASE=${MONGO_INITDB_DATABASE}
     volumes:
       - mongodb_data:/data/db
+    env_file: .env
+    command: mongod 
   redis:
     build:
       context: .
