redis ancora da enviromentizzare

--- a/Auth-Server/Auth.env
+++ b/Auth-Server/Auth.env
@@ -4,3 +4,4 @@ FRONTEND_DOMAIN=http://localhost:3000
 MAIL_SENDER=authentication@nomeapp.it
 REDIS_HOST=localhost
 REDIS_PORT=6380
+REDIS_PASSWORD=redis
