aggiunto sistema base di template per lemail server, disattivati i controlli di sicurezza per gli account google (non funzionano, da pensare soluzione), bisogna testare sia per la registrazione etc normale che per quella google per verificare tutte le possibilità poi prima di reimplementarle (decommentarle definitivamente)

--- a/Auth-Server/.env
+++ b/Auth-Server/.env
@@ -1,7 +1,7 @@
 GOOGLE_ID=671439948785-cv5o90u7o6or6109vps00lkmds9d945g.apps.googleusercontent.com
 GOOGLE_SECRET=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
 FRONTEND_DOMAIN=http://localhost:3000
-MAIL_SENDER=authentication@nomeapp.it
+MAIL_SENDER=APP AUTH <authentication@nomeapp.it>
 REDIS_HOST=localhost
 REDIS_PORT=6380
 REDIS_PASSWORD=redis
