--- a/OTP-Server/Pipfile
+++ b/OTP-Server/Pipfile
@@ -10,6 +10,7 @@ flask-jwt-extended = "==4.6.0"
 flask-pymongo = "==2.3.0"
 twilio = "==9.0.0"
 python-dotenv = "==1.0.0"
+colorama = "*"
 
 [dev-packages]
 
