--- a/Email-Server/.env
+++ b/Email-Server/.env
@@ -2,3 +2,4 @@ REDIS_HOST=localhost
 REDIS_PORT=6380
 MAILGUN_API_KEY=20715dbc2b9c7efe01427328f8692ecc-b7b36bc2-277822c6
 REDIS_PASSWORD=redis
+APP_NAME=APP
