--- a/OTP-Server/.env
+++ b/OTP-Server/.env
@@ -4,3 +4,6 @@ MONGO_HOST=localhost
 MONGO_PORT=27017
 MONGO_USER=root
 MONGO_PASSWORD=rootp
+REDIS_HOST=localhost
+REDIS_PORT=6380
+REDIS_PASSWORD=redis
