--- a/SMS-Server/.env
+++ b/SMS-Server/.env
@@ -3,5 +3,5 @@ REDIS_PORT=6380
 REDIS_PASSWORD=redis
 APP_NAME=APP
 TWILIO_ID=AC63caf652cf79627168cac7b3fabf9830
-TWILIO_SECRET=891ebfb712e8872645b73e78585d3070
+TWILIO_SECRET=4e72503109a1efd6b8c46ddd68b25726 #sto secret twilio lo resetta ogni volta per inattività, a ogni utilizzo di sms server richiederne uno nuovo
 TWILIO_PHONE_NUMBER=+17204662086
